Replace use of inefficient constructors Reported by FindBugs. Not all fixed.
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@1041511 13f79535-47bb-0310-9956-ffa450edef68