@@ -260,9 +260,9 @@ public class MapDemo implements ChannelListener, MembershipListener{
                     case 2: return entry.getValue();
                     case 3: return entry.getPrimary()!=null?entry.getPrimary().getName():"null";
                     case 4: return getMemberNames(entry.getBackupNodes());
-                    case 5: return new Boolean(entry.isPrimary());
-                    case 6: return new Boolean(entry.isProxy());
-                    case 7: return new Boolean(entry.isBackup());
+                    case 5: return Boolean.valueOf(entry.isPrimary());
+                    case 6: return Boolean.valueOf(entry.isProxy());
+                    case 7: return Boolean.valueOf(entry.isBackup());
                     default: return "";
                 }
                 
